--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubot-bangbang",
-  "description": "Execute pre-configured command via Hubot !!",
+  "description": "Execute pre-configured commands via Hubot !!",
   "version": "0.0.1",
   "author": "lukas.pustina@gmail.co",
   "license": "MIT",
