--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "hubot": "2.x"
   },
   "devDependencies": {
+    "bluebird": "^3.4.1",
     "chai": "^2.1.1",
+    "co": "^4.6.0",
     "coffee-script": "^1.10.0",
     "hubot": "2.x",
     "hubot-test-helper": "^1.3.0",
