--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/lukaspustina/hubot-bangbang/issues"
   },
   "dependencies": {
-    "hubot-auth": "^1.3.0",
+    "hubot-auth": "1.3.0",
     "log": "^1.4.0"
   },
   "peerDependencies": {
